--- a/I Am Poor/Base.lproj/Main.storyboard
+++ b/I Am Poor/Base.lproj/Main.storyboard
@@ -18,15 +18,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I Am Poor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czs-Vl-1iL">
-                                <rect key="frame" x="127" y="261" width="161" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I Am Poor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czs-Vl-1iL">
+                                <rect key="frame" x="126.66666666666669" y="261" width="161" height="48"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coal" translatesAutoresizingMaskIntoConstraints="NO" id="beW-cV-Nxf">
+                                <rect key="frame" x="122" y="44" width="170" height="170"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="170" id="XKI-2F-ky6"/>
+                                    <constraint firstAttribute="height" constant="170" id="aQt-AB-BvD"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="czs-Vl-1iL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5cl-UP-8II"/>
+                            <constraint firstItem="beW-cV-Nxf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="8ep-br-ram"/>
+                            <constraint firstItem="czs-Vl-1iL" firstAttribute="top" secondItem="beW-cV-Nxf" secondAttribute="bottom" constant="47" id="Kq3-pa-Pkh"/>
+                            <constraint firstItem="beW-cV-Nxf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="122" id="R1u-25-xBA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="beW-cV-Nxf" secondAttribute="trailing" constant="122" id="qxS-yD-amd"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -34,4 +47,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="coal" width="170.66667175292969" height="170.66667175292969"/>
+    </resources>
 </document>
