Background color changed and constraints added

--- a/I Am Poor/Base.lproj/Main.storyboard
+++ b/I Am Poor/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,24 +15,20 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="I_Am_Poor" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I Am Poor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czs-Vl-1iL">
-                                <rect key="frame" x="126.66666666666669" y="261" width="161" height="48"/>
+                                <rect key="frame" x="107" y="237" width="161" height="48"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coal" translatesAutoresizingMaskIntoConstraints="NO" id="beW-cV-Nxf">
-                                <rect key="frame" x="122" y="44" width="170" height="170"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="170" id="XKI-2F-ky6"/>
-                                    <constraint firstAttribute="height" constant="170" id="aQt-AB-BvD"/>
-                                </constraints>
+                                <rect key="frame" x="122" y="20" width="131" height="170"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.81960784313725488" green="0.84705882352941175" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="czs-Vl-1iL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5cl-UP-8II"/>
                             <constraint firstItem="beW-cV-Nxf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="8ep-br-ram"/>
@@ -48,6 +44,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="coal" width="170.66667175292969" height="170.66667175292969"/>
+        <image name="coal" width="170.5" height="170.5"/>
     </resources>
 </document>
